force-app/main/default/objects/Related_Object__c/Related_Object__c.object-meta.xml
<CustomObject>
    <description>Объект RelatedObject нужен для привязки определенного стандартного объекта Lead/Contact/Case.</description>
    <label>Related Object</label>
    <nameField>
        <displayFormat>RO-{00000}</displayFormat>
        <label>Related Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>