force-app/main/default/objects/Related_Object__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Related Objects</relationshipLabel>
    <relationshipName>Related_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>