force-app/main/default/objects/Related_Object__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Objects</relationshipLabel>
    <relationshipName>Related_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>