force-app/main/default/objects/Related_Object__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Related Objects</relationshipLabel>
    <relationshipName>Related_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>