force-app/main/default/objects/Related_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Related_Contact__c</columns>
    <columns>Related_Case__c</columns>
    <columns>Related_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>